--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,5 +18,8 @@ body {
 
   --default-radius: 0.4em;
 
-  --default-font-family: 'Jost', serif;
+  --default-text-font-family: 'Jost', serif;
+  --default-text-line-height: 1.5;
+  --default-text-align: justify;
+  --default-text-size: 1em;
 }
