--- a/src/app/application/application.component.scss
+++ b/src/app/application/application.component.scss
@@ -4,9 +4,43 @@
   gap: var(--layout-padding);
   overflow: auto;
   box-sizing: border-box;
-  font-family: var(--default-font-family);
+  font-family: var(--default-text-font-family);
+  font-size: 16px;
 
-  ::ng-deep * {
-    box-sizing: border-box;
+  ::ng-deep {
+
+    * {
+      box-sizing: border-box;
+    }
+
+    figure {
+      margin: 0;
+
+      figcaption {
+        margin: 0 auto;
+        margin-top: 1em;
+        max-width: var(--layout-inner-max-width);
+      }
+    }
+
+    // Text
+
+    p {
+      line-height: var(--default-text-line-height);
+      text-align: var(--default-text-align);
+      font-size: var(--default-text-size);
+    }
+
+    h1 {
+      font-size: 2em;
+    }
+
+    h2 {
+      font-size: 1.7em;
+    }
+
+    h3 {
+      font-size: 1.5em;
+    }
   }
 }
