--- a/src/app/hero/hero.component.scss
+++ b/src/app/hero/hero.component.scss
@@ -15,6 +15,7 @@
     background-position: center center;
     border-radius: var(--default-radius);
     overflow: hidden;
+    box-sizing: border-box;
 
     .overlay {
       width: 100%;
@@ -23,6 +24,8 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
+      padding: var(--layout-padding);
+      box-sizing: border-box;
 
       .content {
         display: flex;
@@ -31,6 +34,20 @@
         max-width: var(--layout-inner-max-width);
         width: 100%;
         color: #fff;
+        box-sizing: border-box;
+
+        .title {
+          font-size: 3em;
+          font-weight: 500;
+          margin: 0px;
+        }
+
+        .subtitle {
+          font-size: 2em;
+          font-weight: 300;
+          margin: 0px;
+          margin-bottom: 1em;
+        }
       }
     }
   }
