--- a/src/components/oag-map/oag-map.scss
+++ b/src/components/oag-map/oag-map.scss
@@ -1,20 +1,19 @@
 :host {
-    display: block;
-    height: 500px;
-    background-color: #555;
-
+    --ol-control-radius: var(--default-radius);
     --ol-control-background-color: rgba(200, 200, 200, 0.5);
     --ol-control-button-text-color: #555;
-    --ol-control-button-background-color: #ffffff; // rgba(255, 255, 255, 0.8);
+    --ol-control-button-background-color: #ffffff;
     --ol-control-button-text-color-hover: #000000;
     --ol-control-button-background-color-hover: #eeeeee;
     --ol-control-button-text-color-active: #000000;
     --ol-control-button-background-color-active: #dddddd;
-
     --ol-control-attribution-text-color: #555555;
     --ol-control-attribution-background-color: #fff;
-
     --ol-control-gap: .75em;
+
+    display: block;
+    height: 500px;
+    background-color: #555;
 
     .map-element {
         display: block;
@@ -36,11 +35,11 @@
             right: var(--ol-control-gap);
 
             .ol-zoom-in {
-                border-radius: var(--default-radius) var(--default-radius) 0 0;
+                border-radius: var(--ol-control-radius) var(--ol-control-radius) 0 0;
             }
 
             .ol-zoom-out {
-                border-radius: 0 0 var(--default-radius) var(--default-radius);
+                border-radius: 0 0 var(--ol-control-radius) var(--ol-control-radius);
             }
         }
 
@@ -68,7 +67,7 @@
                 gap: .5em;
                 background-color: var(--ol-control-button-background-color);
                 border: 1px var(--ol-control-background-color) solid;
-                border-radius: var(--default-radius);
+                border-radius: var(--ol-control-radius);
                 transition: all ease 300ms;
                 margin-right: 0.5em;
 
@@ -102,7 +101,7 @@
             line-height: 0;
             background-color: var(--ol-control-button-background-color);
             border: 1px var(--ol-control-background-color) solid;
-            border-radius: var(--default-radius);
+            border-radius: var(--ol-control-radius);
             transition: all ease 300ms;
 
             &:hover {
