--- a/src/global/variables.scss
+++ b/src/global/variables.scss
@@ -1,8 +1,8 @@
 :root {
-  --layout-inner-max-width: 800px;
-  --layout-outer-max-width: 1000px;
+  --default-layout-inner-max-width: 800px;
+  --default-layout-outer-max-width: 1000px;
 
-  --layout-padding: 2em;
+  --default-layout-padding: 2em;
   --component-padding: 1em;
 
   --default-radius: 0.4em;
