[Feature] Image Comparison Component

--- a/src/components/oag-horizontal-gallery/oag-horizontal-gallery.scss
+++ b/src/components/oag-horizontal-gallery/oag-horizontal-gallery.scss
@@ -2,7 +2,7 @@
     --layout-padding: var(--default-layout-padding);
     --layout-inner-max-width: var(--default-layout-inner-max-width);
     --layout-outer-max-width: var(--default-layout-outer-max-width);
-    --control-padding: var(--component-padding);
+    --control-padding: var(--default-component-padding);
 
     width: 100%;
     display: block;
