--- a/src/global/global.scss
+++ b/src/global/global.scss
@@ -18,7 +18,7 @@ body {
     --default-layout-outer-max-width: 1000px;
 
     --default-layout-padding: 2em;
-    --component-padding: 1em;
+    --default-component-padding: 1em;
 
     --default-radius: 0.4em;
 
