[Feature] Button Styls, Inital Slider Position and Mobile optimized Informations

--- a/src/global/variables.scss
+++ b/src/global/variables.scss
@@ -1,3 +1,5 @@
+$mobileBreakpoint: 600px;
+
 :root {
     --default-layout-inner-max-width: 800px;
     --default-layout-outer-max-width: 1000px;
@@ -11,4 +13,6 @@
     --default-text-line-height: 1.5;
     --default-text-align: justify;
     --default-text-size: 1em;
+
+    --mobile-breakpoint: 600px;
 }
