--- a/src/components/oag-hero/oag-hero.scss
+++ b/src/components/oag-hero/oag-hero.scss
@@ -79,7 +79,7 @@
     }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: $mobileBreakpoint) {
 
     :host .container .overlay {
         .logo {
