--- a/src/global/global.scss
+++ b/src/global/global.scss
@@ -13,26 +13,12 @@ body {
     padding: 0;
 }
 
-:root {
-    --default-layout-inner-max-width: 800px;
-    --default-layout-outer-max-width: 1000px;
-
-    --default-layout-padding: 2em;
-    --default-component-padding: 1em;
-
-    --default-radius: 0.4em;
-
-    --default-text-font-family: 'Jost', serif;
-    --default-text-line-height: 1.5;
-    --default-text-align: justify;
-    --default-text-size: 1em;
-}
-
 /* Global Text Styles */
 
 @include global-text;
+@include global-buttons;
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: $mobileBreakpoint) {
     :root {
         --default-layout-padding: 1.5em;
     }
