--- a/src/global/mixins.scss
+++ b/src/global/mixins.scss
@@ -98,3 +98,40 @@
         font-size: 1em;
     }
 }
+
+@mixin global-buttons {
+
+    button,
+    .button {
+        --button-padding: 1em 2em;
+        --button-radius: var(--default-radius);
+        --button-background-color: #333;
+        --button-background-color-hover: #1d1d1d;
+        --button-background-color-active: #000;
+        --button-text-color: #fff;
+        --button-text-color-hover: #fff;
+        --button-text-color-active: #fff;
+
+        display: inline-block;
+        padding: 1em 2em;
+        font-size: 0.9em;
+        background-color: var(--button-background-color);
+        color: var(--button-text-color);
+        font-weight: 600;
+        letter-spacing: 1px;
+        border-radius: var(--button-radius);
+        border: none;
+        transition: all ease 300ms;
+
+        &:hover {
+            cursor: pointer;
+            background-color: var(--button-background-color-hover);
+            color: var(--button-text-color-hover);
+        }
+
+        &:active {
+            background-color: var(--button-background-color-active);
+            color: var(--button-text-color-active);
+        }
+    }
+}
