[Feature] Fixing OL Touch Class and Hero Height

--- a/src/components/oag-map/oag-map.scss
+++ b/src/components/oag-map/oag-map.scss
@@ -20,6 +20,10 @@
         display: block;
         width: 100%;
         height: 100%;
+
+        &.no-ol-touch .ol-touch .ol-control button {
+            font-size: inherit;
+        }
     }
 
     .ol-control {
