--- a/src/components/oag-hero/oag-hero.scss
+++ b/src/components/oag-hero/oag-hero.scss
@@ -8,7 +8,8 @@
 
     display: flex;
     width: 100%;
-    height: 100vh;
+    height: auto;
+    min-height: 100vh;
     background-color: #fff;
     box-sizing: border-box;
     padding: var(--layout-padding);
@@ -17,7 +18,8 @@
         display: flex;
         flex-direction: column;
         width: 100%;
-        height: 100%;
+        height: auto;
+        flex: 1;
         background-size: cover;
         background-position: center center;
         border-radius: var(--container-radius);
