--- a/src/global/mixins.scss
+++ b/src/global/mixins.scss
@@ -135,3 +135,33 @@
         }
     }
 }
+
+@mixin screen-content-item-base {
+    --background-color: #f6f8fa;
+    --background-color-hover: #eee;
+    --border-color: #f0f0f0;
+    --border-color-hover: #d4d4d4;
+    --border-radius: var(--default-radius);
+    --padding: 0.6em;
+    --margin-bottom: 0.8em;
+    --text-color: #000;
+    --text-color-hover: #000;
+
+    display: flex;
+    flex-direction: column;
+    background-color: var(--background-color);
+    border: 1px solid var(--border-color);
+    border-radius: var(--border-radius);
+    padding: var(--padding);
+    gap: 0.5em;
+    margin-bottom: var(--margin-bottom);
+    color: var(--text-color);
+    transition: all ease 300ms;
+}
+
+@mixin screen-content-item-hover-base {
+    cursor: pointer;
+    background-color: var(--background-color-hover);
+    border-color: var(--border-color-hover);
+    color: var(--text-color-hover);
+}
