[Feature] Add disable OL Touch Option to Screen Map

--- a/src/components/oag-screen-map/oag-screen-map.scss
+++ b/src/components/oag-screen-map/oag-screen-map.scss
@@ -117,6 +117,10 @@
                 flex: 1;
 
                 @extend .oag-map;
+
+                &.no-ol-touch .ol-touch .ol-control button {
+                    font-size: inherit;
+                }
             }
 
             .content {
