--- a/src/components/oag-reference/oag-reference.scss
+++ b/src/components/oag-reference/oag-reference.scss
@@ -1,10 +1,20 @@
 :host {
-    display: flex;
+    --background-color: #f4f4f4;
+    --background-color-highlight: #FFFFCC;
+    --intent: 2em;
+
+    display: inline-flex;
     flex-direction: column;
-    background-color: #f4f4f4;
+    background-color: var(--background-color);
     padding: 0.75em 1em;
     border-radius: var(--default-radius);
     margin-bottom: 0.5em;
+    scroll-behavior: smooth;
+
+    & .slot-content {
+        color: #000;
+        font-size: 1em;
+    }
 
     .label {
         color: #000;
@@ -15,5 +25,17 @@
     .reference-code {
         color: #555;
         font-size: 0.8em;
+    }
+}
+
+:host(:target) {
+    background-color: var(--background-color-highlight);
+    scroll-behavior: smooth;
+}
+
+:host([content="literatur"]) {
+    .slot-content {
+        text-indent: calc(-1 * var(--intent));
+        padding-left: var(--intent);
     }
 }
