--- a/src/components/oag-reference/oag-reference.scss
+++ b/src/components/oag-reference/oag-reference.scss
@@ -10,6 +10,7 @@
     border-radius: var(--default-radius);
     margin-bottom: 0.5em;
     scroll-behavior: smooth;
+    scroll-margin-top: 100px;
 
     & .slot-content {
         color: #000;
@@ -30,7 +31,6 @@
 
 :host(:target) {
     background-color: var(--background-color-highlight);
-    scroll-behavior: smooth;
 }
 
 :host([content="literatur"]) {
