Indicator Position Fix

--- a/src/components/oag-hero/oag-hero.scss
+++ b/src/components/oag-hero/oag-hero.scss
@@ -4,16 +4,24 @@
     --layout-inner-max-width: var(--default-layout-inner-max-width);
     --container-radius: var(--default-radius);
     --overlay-padding: calc(1.5 * var(--default-layout-padding));
+
+    --content-safe-zone-top: 5em;
+    --content-safe-zone-bottom: 7em;
     --content-direction: column;
     --component-content-direction: column;
     --headline-margin: 0;
     --caption-margin: 0 0 1em 0;
+
     --logo-display: block;
     --logo-position: absolute;
     --logo-position-top: calc(1.65 * var(--default-layout-padding));
     --logo-position-right: none;
     --logo-position-bottom: none;
     --logo-position-left: calc(1.65 * var(--default-layout-padding));
+
+    --scroll-indicator-align: center;
+    --scroll-indicator-position: absolute;
+    --scroll-indicator-position-bottom: calc(1.65 * var(--default-layout-padding));
 
     display: flex;
     width: 100%;
@@ -74,6 +82,10 @@
                 width: 100%;
                 color: var(--text-color);
                 box-sizing: border-box;
+                position: relative;
+
+                margin-top: var(--content-safe-zone-top);
+                margin-bottom: var(--content-safe-zone-bottom);
 
                 .component-content {
                     display: flex;
@@ -91,52 +103,54 @@
                         margin: var(--caption-margin);
                     }
                 }
+            }
 
-                .scroll-indicator {
-                    display: flex;
-                    flex-direction: column;
-                    align-items: center;
-                    margin-top: 2em;
+            .scroll-indicator {
+                position: var(--scroll-indicator-position);
+                bottom: var(--scroll-indicator-position-bottom);
+                width: 100%;
+                display: flex;
+                flex-direction: column;
+                align-items: var(--scroll-indicator-align);
 
-                    .mouse {
-                        width: 1.75em;
-                        height: 3em;
-                        box-sizing: border-box;
-                        border: 2px solid var(--text-color);
-                        position: relative;
-                        border-radius: 50% 50% 50% 50% / 25% 25% 25% 25%;
+                .mouse {
+                    width: 1.75em;
+                    height: 3em;
+                    box-sizing: border-box;
+                    border: 2px solid var(--text-color);
+                    position: relative;
+                    border-radius: 50% 50% 50% 50% / 25% 25% 25% 25%;
 
-                        &:before {
-                            content: '';
-                            position: absolute;
-                            left: 50%;
-                            top: 0;
-                            transform: translate(-50%, 50%);
-                            width: 8px;
-                            height: 8px;
-                            background: var(--text-color);
-                            border-radius: 50%;
-                            animation: fadeDown 1s ease-out infinite;
-                        }
+                    &:before {
+                        content: '';
+                        position: absolute;
+                        left: 50%;
+                        top: 0;
+                        transform: translate(-50%, 50%);
+                        width: 8px;
+                        height: 8px;
+                        background: var(--text-color);
+                        border-radius: 50%;
+                        animation: fadeDown 1s ease-out infinite;
+                    }
+                }
+
+                .label {
+                    margin-top: 1em;
+                    font-size: 1.15em;
+                    font-weight: 500;
+                    color: var(--text-color);
+                }
+
+                @keyframes fadeDown {
+                    0% {
+                        top: 0%;
+                        opacity: 1;
                     }
 
-                    .label {
-                        margin-top: 1em;
-                        font-size: 1.15em;
-                        font-weight: 500;
-                        color: var(--text-color);
-                    }
-
-                    @keyframes fadeDown {
-                        0% {
-                            top: 0%;
-                            opacity: 1;
-                        }
-
-                        100% {
-                            top: 60%;
-                            opacity: 0;
-                        }
+                    100% {
+                        top: 60%;
+                        opacity: 0;
                     }
                 }
             }
