[Feature] Cockpit and more

--- a/src/components/oag-hero/oag-hero.scss
+++ b/src/components/oag-hero/oag-hero.scss
@@ -158,7 +158,7 @@
     }
 }
 
-@media screen and (max-width: $mobileBreakpoint) {
+@media screen and (max-width: $phoneBreakpoint) {
 
     :host .container .overlay {
         .logo {
