--- a/src/components/oag-application/oag-application.scss
+++ b/src/components/oag-application/oag-application.scss
@@ -32,7 +32,7 @@
 }
 
 
-@media screen and (max-width: $mobileBreakpoint) {
+@media screen and (max-width: $phoneBreakpoint) {
 
     :host([desktop-only="true"]),
     :host([desktop-optimized="true"]:not(.confirmed)) {
