--- a/src/components/oag-misc/oag-misc.scss
+++ b/src/components/oag-misc/oag-misc.scss
@@ -56,3 +56,21 @@
         }
     }
 }
+
+@media screen and (max-width: $phoneBreakpoint) {
+    :host {
+        flex-direction: column;
+
+        .content {
+
+            .label,
+            .tagline {
+                text-align: center;
+            }
+
+            slot[name=links] {
+                justify-content: center;
+            }
+        }
+    }
+}
