--- a/src/global/global.scss
+++ b/src/global/global.scss
@@ -1,6 +1,5 @@
 * {
     box-sizing: border-box;
-    scroll-behavior: smooth !important;
 }
 
 html,
@@ -8,11 +7,13 @@ body {
     width: 100%;
     height: 100%;
     display: block;
-    overflow: auto;
     margin: 0;
     border: 0;
     padding: 0;
-    scroll-behavior: smooth !important;
+
+    &html {
+        overflow: auto;
+    }
 }
 
 /* Simple Lightbox */
