--- a/src/components/oag-tooltip/oag-tooltip.scss
+++ b/src/components/oag-tooltip/oag-tooltip.scss
@@ -1,3 +1,5 @@
+@use 'sass:string';
+
 :host {
     display: block;
     position: absolute;
@@ -18,7 +20,6 @@
     --component-padding: var(--default-component-padding);
 
     &:host(.collapsed) {
-
         .trigger {
             animation: pulse 2s infinite;
         }
@@ -68,7 +69,7 @@
             margin: 25%;
 
             svg {
-                filter: unquote("invert(var(--tooltip-symbol-invert))");
+                filter: string.unquote('invert(var(--tooltip-symbol-invert))');
             }
         }
 
