--- a/src/global/global.scss
+++ b/src/global/global.scss
@@ -1,3 +1,5 @@
+@use '~simplelightbox/src/simple-lightbox.scss';
+
 * {
     box-sizing: border-box;
 }
@@ -22,8 +24,6 @@ $sl-overlay-background: #000;
 $sl-navigation-color: #fff;
 $sl-caption-color: #fff;
 $sl-caption-background: transparent;
-
-@import '~simplelightbox/src/simple-lightbox.scss';
 
 .sl-image img {
     border-radius: var(--default-radius);
